# py-promql-parser

./: Cargo.toml  README.md  promql_parser.pyi  pyproject.toml  test_promql_parser.py
.github/: dependabot.yml
.github/workflows/: CI.yml
promql_parser/: __init__.py  promql_parser.pyi
src/: expr.rs  lib.rs
