[package]
name = "py-promql-parser"
version = "0.2.0"
edition = "2021"
description = "PromQL Parser for Python"
license = "MIT"
repository = "https://github.com/messense/py-promql-parser"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "promql_parser"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
promql-parser = "0.2.0"
pyo3 = { version = "0.19.0", features = ["chrono", "extension-module"] }
