[package]
name = "py-promql-parser"
version = "0.3.2"
edition = "2021"
description = "PromQL Parser for Python"
license = "MIT"
repository = "https://github.com/messense/py-promql-parser"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "promql_parser"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
promql-parser = "0.3.1"
pyo3 = { version = "0.20.0", features = ["chrono", "extension-module"] }
